--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "pinnacle20",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.5.3"
   }
 }
