--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "pinnacle20",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.5.3"
+    "mongoose": "^7.5.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1"
   }
 }
